# py-canvas

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample-edq-canvas.json
.github/workflows/: main.yml
canvas/: __main__.py  config.py  log.py
canvas/api/: common.py  resolve.py
canvas/api/assignment/: common.py  fetch.py  fetchscores.py  fetchsubmissionfiles.py  list.py  resolve.py  uploadscores.py
canvas/api/gradebook/: fetch.py  upload.py
canvas/api/group/: common.py  list.py  listgroupingmembership.py  listgroupings.py  listgroupmembers.py  listgroups.py  resolve.py
canvas/api/user/: common.py  fetch.py  list.py  resolve.py
canvas/cli/: __main__.py  common.py
canvas/cli/assignment/: __main__.py  common.py  fetch-scores.py  fetch-submission-files.py  fetch.py  list.py  upload-score.py  upload-scores.py
canvas/cli/gradebook/: __main__.py  fetch.py  upload.py
canvas/cli/group/: __main__.py  list-group-members.py  list-grouping-membership.py  list-groupings.py  list-groups.py  list.py
canvas/cli/user/: __main__.py  common.py  fetch.py  list.py
canvas/util/: cli.py  code.py  file.py
tests/: test_cli.py
tests/api/: server.py  test_api.py
tests/api/data/: test_gradebook_fetch_base.json  test_gradebook_fetch_user.json  test_user_get_base.json
tests/api/test_cases/: assignment_fetch_base.json  assignment_fetch_empty.json  assignment_fetch_label.json  assignment_fetch_missing.json  assignment_fetch_name.json  assignment_fetchscores_base.json  assignment_fetchscores_label.json  assignment_fetchscores_missing.json  assignment_fetchscores_name.json  assignment_fetchsubmissionfiles_base.json  assignment_fetchsubmissionfiles_label.json  assignment_fetchsubmissionfiles_missing.json  assignment_fetchsubmissionfiles_name.json  assignment_list_base.json  assignment_list_full.json  assignment_uploadscores_base.json  assignment_uploadscores_comment.json  assignment_uploadscores_empty.json  assignment_uploadscores_mismatch.json  assignment_uploadscores_multiple.json  gradebook_fetch_base.json  gradebook_fetch_computed.json  gradebook_fetch_user_email.json  gradebook_fetch_user_id.json  gradebook_fetch_user_id_computed.json  gradebook_fetch_user_multi.json  gradebook_upload_base.json  gradebook_upload_empty.json  gradebook_upload_error_too_many_assignment_scores.json  gradebook_upload_multi.json  gradebook_upload_resolve.json  group_list_base.json  group_list_full.json  group_listgroupingmembership_base.json  group_listgroupingmembership_label.json  group_listgroupingmembership_missing.json  group_listgroupingmembership_name.json  group_listgroupingmembership_single.json  group_listgroupings_base.json  group_listgroupings_full.json  (+17 more)
tests/cli/: test_cli.py
tests/cli/data/: assignment_uploadscores_bad_number.txt  assignment_uploadscores_base.txt  assignment_uploadscores_comment.txt  assignment_uploadscores_header.txt  assignment_uploadscores_missing_and_existing_users.txt  assignment_uploadscores_missing_user.txt  (+16 more)
tests/server/: base.py  server.py
(+187 files in other folders)
