[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "twine"
]

[project]
name = "edq-canvas"
version = "0.0.1"
description = "A suite of tools and Python interface for Instructure's Canvas LMS."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
    {name = "Eriq Augustine", email = "eaugusti@ucsc.edu"},
]

keywords = ['education', 'lms', 'canvas', 'api']
classifiers = [
    'Intended Audience :: Education',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
]

dependencies = [
    "json5>=0.9.14",
    "platformdirs>=3.10.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/eriq-augustine/py-canvas"
Repository = "https://github.com/eriq-augustine/py-canvas"

[tool.setuptools.packages.find]
where = ["."]
include = ["canvas*"]
namespaces = false
