[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "packaging>=21.3",
    "twine",
    "vermin",
]

[project]
name = "edq-canvas"
version = "0.0.4"
description = "A suite of tools and Python interface for Instructure's Canvas LMS."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
    {name = "Eriq Augustine", email = "eaugusti@ucsc.edu"},
]

keywords = ['education', 'lms', 'canvas', 'api']
classifiers = [
    'Intended Audience :: Education',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
]

dependencies = [
    "json5>=0.9.14",
    "platformdirs>=3.10.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/edulinq/py-canvas"
Repository = "https://github.com/edulinq/py-canvas"

[tool.setuptools.packages.find]
where = ["."]
include = ["canvas*"]
namespaces = false
