[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "packaging>=21.3",
    "twine",
    "vermin",
]

[project]
name = "edq-canvas"
description = "A suite of tools and Python interface for Instructure's Canvas LMS."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
    {name = "Eriq Augustine", email = "eriq@edulinq.org"},
]

keywords = ['education', 'lms', 'canvas', 'api']
classifiers = [
    'Intended Audience :: Education',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
]

dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
]

[tool.setuptools.dynamic]
version = {attr = "canvas.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}}

[project.urls]
Homepage = "https://github.com/edulinq/py-canvas"
Repository = "https://github.com/edulinq/py-canvas"

[tool.setuptools.packages.find]
where = ["."]
include = ["canvas*"]
namespaces = false
